--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,39 +1,33 @@
-.App {
+.container {
   text-align: center;
+  width: 100%;
+  max-width: 800px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-input {
+  width: 100%;
+  max-width: 600px;
+  margin: 40px auto;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.search-btn {
+  outline: none;
+  position: absolute;
+  right: 0;
+  top: 10%;
+  border: none;
+  background: url('../public/img/search-btn.png');
+  width: 32px;
+  height: 32px;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.wrapper {
+  color: black;
+  background-color: white;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.book-card {
+  background-color: lightgray;
+  border: none;
 }
