Implemented the functionality of the main page
Set up work with the server based on a search query, rendering maps according to the server data.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,6 +28,13 @@
 }
 
 .book-card {
+  height: 100%;
   background-color: lightgray;
   border: none;
+}
+
+.row-flex {
+  display: flex;
+  flex-flow: row wrap;
+  box-sizing: border-box;
 }
