--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('../public/img/app-bg-2.jpg') no-repeat center top fixed;
+  background: url('../public/img/app-bg.jpg') no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
