Created a book page, linked the pages and set up transitions between them.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -38,3 +38,27 @@
   flex-flow: row wrap;
   box-sizing: border-box;
 }
+
+.book-poster {
+  height: 100%;
+  background-color: lightgray;
+}
+
+.book-description {
+  width: 100%;
+  min-height: 200px;
+  box-sizing: content-box;
+
+  padding: 2%;
+  margin-top: 2rem;
+  border: solid lightgray 1px;
+
+  font-weight: 500;
+  font-size: 24px;
+}
+
+@media screen and (max-width: 720px) {
+  .book-description {
+    font-size: 16px;
+  }
+}
