--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -57,8 +57,18 @@
   font-size: 24px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 2000px) {
+  .book-description {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1500px) {
   .book-description {
     font-size: 16px;
   }
 }
+
+
+
+
